Solved the links not working issue using z-index. It was due to bg image appearing over the links. The links were in the bg actually.

--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,7 @@ a:hover {
     .bg-pattern-top-desktop,
     .bg-pattern-bottom-desktop {
         display: block;
+        z-index: -1;
     }
 
     .bg-pattern-top-desktop {
